--- a/app/src/main/res/drawable/entrydata.xml
+++ b/app/src/main/res/drawable/entrydata.xml
@@ -13,7 +13,7 @@
     <!-- Default state -->
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/background" /> <!-- Default button color -->
+            <solid android:color="@color/white" /> <!-- Default button color -->
             <corners android:radius="12dp" />
             <stroke android:color="@color/white" android:width="1dp" />
         </shape>
