--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,12 +11,12 @@
         android:id="@+id/linearLayout4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+
         android:layout_marginBottom="8dp">
 
         <ImageView
             android:id="@+id/btnHomeDrawer"
-            android:layout_width="50dp"
+            android:layout_width="40dp"
             android:layout_height="50dp"
             app:layout_constraintStart_toStartOf="@id/cardViewFreeTrial"
             app:layout_constraintTop_toTopOf="@id/cardViewHome"
@@ -28,7 +28,9 @@
             android:id="@+id/cardViewHome"
             android:layout_width="0dp"
             android:layout_height="50dp"
-            android:layout_margin="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
             app:backgroundTint="@android:color/transparent"
             app:cardBackgroundColor="@color/white_v2"
             app:cardCornerRadius="28dp"
@@ -79,14 +81,12 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:paddingTop="16dp"
-            android:paddingBottom="8dp"
+            android:layout_marginTop="5dp"
             android:text="Meal of the Day"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/cardViewFreeTrial"
-            app:layout_constraintStart_toStartOf="@+id/cardViewHome"
+            app:layout_constraintStart_toStartOf="@+id/btnHomeDrawer"
             app:layout_constraintTop_toBottomOf="@+id/cardViewHome" />
 
 
@@ -95,9 +95,9 @@
                 android:id="@+id/cardViewFreeTrial"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="20dp"
-                android:layout_marginBottom="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView2"
@@ -110,66 +110,79 @@
                     android:id="@+id/constraintLayout2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:paddingTop="15dp"
-                    android:paddingBottom="15dp">
+                    >
 
-                    <ImageView
-                        android:id="@+id/meal_image"
-                        android:layout_width="160dp"
-                        android:layout_height="120dp"
-                        android:layout_marginStart="12dp"
+                    <com.google.android.material.card.MaterialCardView
+                        android:layout_width="match_parent"
+                        android:layout_height="180dp"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/btn_favorite"
-                        app:layout_constraintStart_toEndOf="@+id/meal_des"
-                        app:layout_constraintTop_toTopOf="parent"
-                        tools:srcCompat="@tools:sample/avatars" />
-
-                    <ImageButton
-                        android:id="@+id/btn_favorite"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:layout_marginEnd="16dp"
-                        android:background="@drawable/iconfavorite"
-                        android:contentDescription="Favorite"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent">
+
+                        <ImageView
+                            android:id="@+id/meal_image"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:scaleType="centerCrop"
+                            tools:srcCompat="@tools:sample/avatars" />
+
+                    </com.google.android.material.card.MaterialCardView>
+
+
+                    <com.google.android.material.card.MaterialCardView
+                        android:id="@+id/materialCardViewFav"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        android:layout_marginTop="15dp"
+                        android:layout_marginEnd="15dp"
+                        app:cardBackgroundColor="@color/white"
+                        app:cardElevation="10dp"
+                        app:strokeWidth="0.5dp">
+
+                        <ImageButton
+                            android:id="@+id/btn_favoriteH"
+                            android:layout_width="28dp"
+                            android:layout_height="30dp"
+                            android:layout_gravity="center"
+                            android:background="@drawable/icons_favorite48"
+                            android:contentDescription="Favorite"
+                            />
+
+                    </com.google.android.material.card.MaterialCardView>
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/btn_add_to_plan"
-                        android:layout_width="140dp"
+                        android:layout_width="100dp"
                         android:layout_height="40dp"
-                        android:layout_marginEnd="8dp"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginBottom="16dp"
                         android:background="@drawable/entrydata"
                         android:inputType="text"
                         android:text="Add to plan"
                         android:textColor="@color/black"
                         android:textSize="14sp"
+                        android:elevation="4dp"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/meal_image"
-                        app:layout_constraintStart_toStartOf="@+id/textView8" />
+                        app:layout_constraintStart_toStartOf="parent" />
 
                     <TextView
-                        android:id="@+id/meal_des"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/meal_name"
+                        android:layout_width="100dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="16dp"
+                        android:maxLines="2"
+                        android:minLines="2"
+                        android:layout_marginStart="22dp"
+                        android:layout_marginTop="16dp"
                         android:text="TextView              "
+                        android:textSize="20sp"
+                        android:textStyle="bold"
                         android:textColor="@color/white"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
-                    <TextView
-                        android:id="@+id/textView8"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
-                        android:text="Get access all the amazing recipes from the world"
-                        android:textColor="@color/white"
-                        android:textSize="15sp"
-                        app:layout_constraintBottom_toTopOf="@+id/btn_add_to_plan"
-                        app:layout_constraintEnd_toEndOf="@+id/meal_des"
-                        app:layout_constraintStart_toStartOf="@+id/meal_des"
-                        app:layout_constraintTop_toBottomOf="@+id/meal_des" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -183,8 +196,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="1dp"
-            android:paddingTop="16dp"
-            android:paddingBottom="8dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
             android:text="Categories"
             android:textSize="18sp"
             android:textStyle="bold"
@@ -204,7 +217,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -243,42 +255,48 @@
                 </LinearLayout>
 
             </com.facebook.shimmer.ShimmerFrameLayout>
-
-            <com.facebook.shimmer.ShimmerFrameLayout
-                android:id="@+id/shimmer_mealbycategories"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:orientation="horizontal"
-                app:layout_constraintEnd_toEndOf="@id/shimmer_categories"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@id/shimmer_categories"
-                app:layout_constraintTop_toBottomOf="@+id/shimmer_categories">
-
-                <include layout="@layout/shimmer_placeholder_main_view_meal_layout" />
-
-            </com.facebook.shimmer.ShimmerFrameLayout>
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerview_mealbycategories"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="10dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/constraintlayoutcatg"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/constraintlayout"
+                >
 
+                <com.facebook.shimmer.ShimmerFrameLayout
+                    android:id="@+id/shimmer_mealbycategories"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    app:layout_constraintEnd_toEndOf="@id/recyclerview_mealByCategories"
+                    app:layout_constraintStart_toStartOf="@id/recyclerview_mealByCategories"
+                    app:layout_constraintTop_toTopOf="@id/recyclerview_mealByCategories"
+                    >
+                    <include layout="@layout/shimmer_placeholder_main_view_meal_layout" />
+
+                </com.facebook.shimmer.ShimmerFrameLayout>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerview_mealByCategories"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="10dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        <!--
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintlayoutGold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:visibility="gone"
-            app:layout_constraintTop_toBottomOf="@id/constraintlayout">
+            app:layout_constraintTop_toBottomOf="@id/constraintlayoutcatg">
 
             <TextView
                 android:id="@+id/textViewGold"
@@ -318,19 +336,19 @@
                 app:layout_constraintTop_toBottomOf="@id/textViewGold" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+        -->
 
         <TextView
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
             android:text="Recommendations for you"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/constraintlayoutGold" />
+            app:layout_constraintTop_toBottomOf="@id/constraintlayoutcatg" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintlayout1"
@@ -356,8 +374,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginEnd="10dp"
+
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -369,11 +388,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="5dp"
             app:cardBackgroundColor="@color/white_v2"
-            app:cardCornerRadius="500dp"
+            app:cardCornerRadius="50dp"
             app:layout_constraintBottom_toBottomOf="@+id/textViewCuisines"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/constraintlayout1"
+            app:layout_constraintTop_toBottomOf="@+id/constraintlayout1"
             app:strokeWidth="0dp">
 
             <ImageView
@@ -389,7 +410,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="5dp"
             android:textColor="@color/black"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -399,10 +420,6 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="20dp"
             app:layout_constraintTop_toBottomOf="@id/textViewCuisines">
 
             <com.facebook.shimmer.ShimmerFrameLayout
@@ -410,8 +427,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintEnd_toEndOf="@id/recyclerview_meal_by_fav_cuisine"
+                app:layout_constraintStart_toStartOf="@id/recyclerview_meal_by_fav_cuisine"
+                app:layout_constraintTop_toTopOf="@id/recyclerview_meal_by_fav_cuisine">
 
                 <include layout="@layout/shimmer_placeholder_main_view_meal_layout" />
 
@@ -421,6 +439,9 @@
                 android:id="@+id/recyclerview_meal_by_fav_cuisine"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
