--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:padding="16dp"
     android:background="@color/background"
-    tools:context=".auth.SignupFragment">
+    tools:context=".auth.signup.view.SignupFragment">
     <!-- Name Input -->
     <TextView
         android:id="@+id/textView10"
