--- a/app/src/main/res/layout/item_rv_main_view_of_meals.xml
+++ b/app/src/main/res/layout/item_rv_main_view_of_meals.xml
@@ -1,90 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="220dp"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginStart="5dp"
-    android:layout_marginEnd="5dp"
-    android:background="@color/white"
+    android:layout_marginStart="4dp"
+    android:layout_marginEnd="10dp"
+    android:layout_marginBottom="16dp"
+    android:layout_marginTop="8dp"
 
+    android:background="@drawable/gray_background"
+    android:elevation="5dp"
     >
-
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/materialCardView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingBottom="12dp"
-        android:background="@color/white"
-        android:elevation="8dp"
-        app:cardCornerRadius="18dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="220dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:strokeColor="@color/colorGray"
-        app:strokeWidth="1dp">
+        app:cardCornerRadius="10dp"
+        >
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <ImageView
+            android:id="@+id/item_image"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:src="@drawable/man"
+            />
+    </com.google.android.material.card.MaterialCardView>
 
-            <ImageView
-                android:id="@+id/item_image"
-                android:layout_width="220dp"
-                android:layout_height="260dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/man"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageButton
-                android:id="@+id/btn_favoriteH"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="12dp"
-                android:background="@drawable/heart"
-                android:contentDescription="Favorite"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        app:cardBackgroundColor="@color/white"
+        app:cardElevation="8dp"
+        app:strokeWidth="0.5dp">
+
+        <ImageButton
+            android:id="@+id/btn_favoriteH"
+            android:layout_width="26dp"
+            android:layout_height="28dp"
+            android:layout_gravity="center"
+            android:background="@drawable/icons_favorite48"
+            android:contentDescription="Favorite" />
+
+    </com.google.android.material.card.MaterialCardView>
+
 
             <TextView
                 android:id="@+id/item_title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="0dp"
-                android:gravity="start"
                 android:maxLines="2"
                 android:minLines="2"
+                android:layout_marginTop="4dp"
+                android:layout_marginEnd="12dp"
+                android:layout_marginStart="12dp"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/item_image" />
+                app:layout_constraintTop_toBottomOf="@+id/materialCardView" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_add_to_planH"
                 android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="12dp"
-                android:layout_marginBottom="12dp"
+                android:layout_height="35dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="10dp"
                 android:background="@drawable/entrydata"
                 android:inputType="text"
                 android:text="Add to plan"
-                android:textColor="@color/black"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/item_title" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </com.google.android.material.card.MaterialCardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
