--- a/app/src/main/res/navigation/nav_auth.xml
+++ b/app/src/main/res/navigation/nav_auth.xml
@@ -24,7 +24,7 @@
         tools:layout="@layout/fragment_forgot_password" />
     <fragment
         android:id="@+id/signupFragment"
-        android:name="com.example.foodplanner.auth.SignupFragment"
+        android:name="com.example.foodplanner.auth.signup.view.SignupFragment"
         android:label="fragment_signup"
         tools:layout="@layout/fragment_signup" />
 </navigation>
