--- a/app/src/main/res/layout/item_favourite.xml
+++ b/app/src/main/res/layout/item_favourite.xml
@@ -37,8 +37,8 @@
             android:id="@+id/btn_loveH"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="5dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
             android:layout_gravity="end"
             android:clickable="true"
             android:focusable="true"
@@ -55,7 +55,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textColor="@color/black"
+        android:textColor="@color/mycolor"
         android:textSize="18sp"
         android:textStyle="bold"
 
