--- a/app/src/main/res/layout/item_rv_home_categories.xml
+++ b/app/src/main/res/layout/item_rv_home_categories.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="70dp"
     android:layout_height="70dp"
-    android:layout_marginStart="5dp"
+    android:layout_marginStart="8dp"
     android:layout_marginEnd="5dp"
     app:cardCornerRadius="500dp"
     app:strokeColor="@color/colorGray"
@@ -16,22 +16,23 @@
         android:scaleType="centerCrop" />
 
     <com.google.android.material.card.MaterialCardView
+        android:id="@+id/card_item_category"
         android:layout_width="70dp"
         android:layout_height="70dp"
         app:cardCornerRadius="500dp"
-        app:cardBackgroundColor="#66000000"/>
+        app:cardBackgroundColor="#30000000"/>
 
 
-        <TextView
-            android:id="@+id/item_category_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:paddingStart="5dp"
-            android:paddingEnd="5dp"
-            android:textColor="@color/white"
-            android:textSize="14sp"
-            android:textStyle="bold" />
+    <TextView
+        android:id="@+id/item_category_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"
+        android:textColor="@color/white"
+        android:textSize="14sp"
+        android:textStyle="bold" />
 
     </com.google.android.material.card.MaterialCardView>
