--- a/app/src/main/res/layout/item_rv_main_view_of_meals.xml
+++ b/app/src/main/res/layout/item_rv_main_view_of_meals.xml
@@ -3,15 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="235dp"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
     app:cardCornerRadius="16dp"
-    app:cardElevation="4dp"
-    android:layout_marginStart="10dp"
-    android:layout_marginEnd="5dp"
+    app:cardElevation="6dp"
+    android:layout_marginStart="15dp"
+    android:layout_marginEnd="10dp"
     android:layout_marginBottom="16dp"
     android:layout_marginTop="8dp"
     android:background="@drawable/gray_background"
-    android:elevation="5dp">
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -50,7 +49,7 @@
             android:layout_marginEnd="14dp"
             android:maxLines="2"
             android:minLines="2"
-            android:textColor="@color/black"
+            android:textColor="@color/mycolor"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
