--- a/app/src/main/res/layout/item_suggestion.xml
+++ b/app/src/main/res/layout/item_suggestion.xml
@@ -21,6 +21,6 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:textSize="20sp"
-        android:textColor="@android:color/black" />
+        android:textColor="@color/mycolor" />
 
 </LinearLayout>
